RESOLVED FIXED88858
Fix packing in StyleBoxData for Windows.
https://bugs.webkit.org/show_bug.cgi?id=88858
Summary Fix packing in StyleBoxData for Windows.
Alexis Menard (darktears)
Reported 2012-06-12 04:39:06 PDT
Fix packing in StyleBoxData for Windows.
Attachments
Patch (1.43 KB, patch)
2012-06-12 04:42 PDT, Alexis Menard (darktears)
no flags
Patch (2.31 KB, patch)
2012-06-12 13:50 PDT, Alexis Menard (darktears)
no flags
Alexis Menard (darktears)
Comment 1 2012-06-12 04:42:56 PDT
Tony Chang
Comment 2 2012-06-12 11:03:14 PDT
Comment on attachment 147057 [details] Patch Please add a compile assert. See RenderStyle.cpp for an example of a SameSizeAs COMPILE_ASSERT.
Alexis Menard (darktears)
Comment 3 2012-06-12 13:50:18 PDT
Tony Chang
Comment 4 2012-06-12 14:04:19 PDT
Comment on attachment 147150 [details] Patch Thanks! I want to see the win bot pass before setting cq+.
Alexis Menard (darktears)
Comment 5 2012-06-12 14:05:41 PDT
(In reply to comment #4) > (From update of attachment 147150 [details]) > Thanks! I want to see the win bot pass before setting cq+. Sounds like a plan :)
WebKit Review Bot
Comment 6 2012-06-12 16:07:39 PDT
Comment on attachment 147150 [details] Patch Clearing flags on attachment: 147150 Committed r120136: <http://trac.webkit.org/changeset/120136>
WebKit Review Bot
Comment 7 2012-06-12 16:07:44 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.