Fix packing in StyleBoxData for Windows. https://bugs.webkit.org/show_bug.cgi?id=88858

Reviewed by Tony Chang.

MSVC doesn't pack bitfields if the types are mixed.
We can safely change the bool type to an unsigned so
the packing will happen. I have added a compile assert
for future regressions.

No new tests : we should not see any regressions.

* rendering/style/StyleBoxData.h:
* rendering/style/StyleBoxData.cpp:
(StyleBoxData):


Canonical link: https://commits.webkit.org/106760@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@120136 268f45cc-cd09-0410-ab3c-d52691b4dbfc